const dgram = require('dgram');
const protobuf = require('protobufjs');
const path = require('path');

// åˆ›å»ºUDP socketç”¨äºå‘é€ç»„æ’­æ•°æ®
const sender = dgram.createSocket('udp4');

// ç»„æ’­åœ°å€å’Œç«¯å£
const MULTICAST_ADDRESS = '239.255.43.21';
const MULTICAST_PORT = 10086;

// åŠ è½½protobufå®šä¹‰
let root = null;
let messageTypes = {};

async function loadProtobufDefinitions() {
  try {
    const protobufPath = path.join(__dirname, '..', 'protobuf');
    
    // åŠ è½½PlatformCmdç›¸å…³çš„protobufå®šä¹‰
    root = await protobuf.load([
      path.join(protobufPath, 'PublicStruct.proto'),
      path.join(protobufPath, 'PlatformCmd.proto')
    ]);

    // è·å–æ¶ˆæ¯ç±»å‹
    messageTypes = {
      PlatformCmd: root.lookupType('PlatformStatus.PlatformCmd'),
      FireParam: root.lookupType('PlatformStatus.FireParam')
    };

    console.log('PlatformCmd Protobufå®šä¹‰æ–‡ä»¶åŠ è½½æˆåŠŸ');
    console.log('å¯ç”¨æ¶ˆæ¯ç±»å‹:', Object.keys(messageTypes));
  } catch (error) {
    console.error('åŠ è½½PlatformCmd Protobufå®šä¹‰æ–‡ä»¶å¤±è´¥:', error);
    process.exit(1);
  }
}

// åˆ›å»ºPlatformCmdæµ‹è¯•æ•°æ®
function createPlatformCmdData() {
  // åˆ›å»ºç«ç‚®å‘å°„å‚æ•°
  const fireParam = messageTypes.FireParam.create({
    weaponName: '155æ¯«ç±³æ¦´å¼¹ç‚®',
    targetName: 'æ•Œæ–¹è£…ç”²è½¦',
    quantity: 1
  });

  // åˆ›å»ºå¹³å°æ§åˆ¶å‘½ä»¤
  const platformCmd = messageTypes.PlatformCmd.create({
    commandID: Date.now(),
    platformName: 'artillery1',
    platformType: 'Artillery',
    command: 10, // Arty_Fire = 10
    fireParam: fireParam
  });

  return platformCmd;
}

// åˆ›å»ºå¸¦åè®®å¤´çš„æ•°æ®åŒ…
function createPlatformCmdPacket() {
  try {
    const platformCmdData = createPlatformCmdData();
    
    // ç¼–ç protobufæ•°æ®
    const protobufBuffer = messageTypes.PlatformCmd.encode(platformCmdData).finish();
    
    console.log('åˆ›å»ºçš„PlatformCmdæ•°æ®:', JSON.stringify(messageTypes.PlatformCmd.toObject(platformCmdData), null, 2));
    console.log('Protobufç¼–ç åå¤§å°:', protobufBuffer.length, 'å­—èŠ‚');

    // æ„é€ å®Œæ•´çš„æ•°æ®åŒ…: 0xAA 0x55 + protocolID + packageType + size + protobufData
    const protocolID = 0x01; // åè®®ID
    const packageType = 0x2A; // PackType_PlatformCmd
    const size = protobufBuffer.length;

    // åˆ›å»ºåŒ…å¤´
    const header = Buffer.alloc(8);
    header[0] = 0xAA; // åŒ…å¤´æ ‡è¯†
    header[1] = 0x55; // åŒ…å¤´æ ‡è¯†
    header[2] = protocolID; // åè®®ID
    header[3] = packageType; // åŒ…ç±»å‹
    header.writeUInt32LE(size, 4); // protobufæ•°æ®é•¿åº¦ï¼ˆå°ç«¯åºï¼‰

    // ç»„åˆå®Œæ•´æ•°æ®åŒ…
    const fullPacket = Buffer.concat([header, protobufBuffer]);
    
    console.log('æ•°æ®åŒ…æ„é€ è¯¦æƒ…:', {
      æ€»é•¿åº¦: fullPacket.length,
      åŒ…å¤´: header.toString('hex'),
      åè®®ID: `0x${protocolID.toString(16)}`,
      åŒ…ç±»å‹: `0x${packageType.toString(16)}`,
      å£°æ˜å¤§å°: size,
      å®é™…protobufå¤§å°: protobufBuffer.length,
      å®Œæ•´åŒ…å‰16å­—èŠ‚: fullPacket.subarray(0, Math.min(16, fullPacket.length)).toString('hex')
    });

    return fullPacket;
  } catch (error) {
    console.error('åˆ›å»ºPlatformCmdæ•°æ®åŒ…å¤±è´¥:', error);
    throw error;
  }
}

// å‘é€æ•°æ®
function sendPlatformCmdData() {
  try {
    const packet = createPlatformCmdPacket();
    
    sender.send(packet, MULTICAST_PORT, MULTICAST_ADDRESS, (err) => {
      if (err) {
        console.error('å‘é€å¤±è´¥:', err);
      } else {
        console.log(`âœ… å·²å‘é€PlatformCmdæ•°æ®åˆ° ${MULTICAST_ADDRESS}:${MULTICAST_PORT}`);
        console.log(`ğŸ“¦ æ•°æ®åŒ…å¤§å°: ${packet.length} å­—èŠ‚`);
        console.log(`ğŸ“‹ åŒ…ç±»å‹: 0x${packet[3].toString(16)} (PackType_PlatformCmd)`);
        console.log(`ğŸ”— åè®®ID: 0x${packet[2].toString(16)}`);
        console.log(`â° å‘é€æ—¶é—´: ${new Date().toLocaleString('zh-CN')}`);
        console.log('---');
      }
    });
  } catch (error) {
    console.error('å‘é€PlatformCmdæ•°æ®å¤±è´¥:', error);
  }
}

// ä¸»å‡½æ•°
async function main() {
  await loadProtobufDefinitions();
  
  console.log('ğŸš€ å¼€å§‹å‘é€PlatformCmdæ ¼å¼çš„ç»„æ’­æµ‹è¯•æ•°æ®...');
  console.log(`ğŸ¯ ç›®æ ‡åœ°å€: ${MULTICAST_ADDRESS}:${MULTICAST_PORT}`);
  console.log('â¹ï¸  æŒ‰ Ctrl+C åœæ­¢');
  console.log('=====================================');

  // ç«‹å³å‘é€ä¸€æ¬¡
  console.log('ğŸ“¤ å‘é€PlatformCmdæµ‹è¯•æ•°æ®...');
  sendPlatformCmdData();

  // æ¯10ç§’å‘é€ä¸€æ¬¡
  setInterval(() => {
    console.log('ğŸ“¤ å®šæ—¶å‘é€PlatformCmdæ•°æ®...');
    sendPlatformCmdData();
  }, 10000);
}

// ä¼˜é›…é€€å‡º
process.on('SIGINT', () => {
  console.log('\nğŸ›‘ åœæ­¢å‘é€...');
  sender.close();
  process.exit(0);
});

// å¯åŠ¨
main().catch(console.error);